--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class = "container-fluid top-container">
   <div class = "row-fluid">
     <div class = "col-xs-12 col-md-3 affix panel-wrapper animated fadeInDown">
-      <p class = "pdf-notice"><a href = "//github.com/{{ site.data.info.author.github }}/resumecard">This pdf is a print version of the live resume: https://github.com/{{ site.data.info.author.github }}/resumecard</a>
+      <p class = "pdf-notice"><a href = "https://{{ site.data.info.author.github }}.github.io/resumecard">This pdf is a print version of the live resume: https://{{ site.data.info.author.github }}.github.io/resumecard</a>
       </p>
       <div class = "row-fluid profile-container">
         <img class = "avatar img-circle center-block" src = "{{ site.favicon | prepend: site.baseurl }}"
